--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -53,4 +53,12 @@
         app:layout_constraintEnd_toEndOf="@+id/password_text"
         app:layout_constraintTop_toBottomOf="@+id/password_text" />
 
+    <Switch
+        android:id="@+id/switch1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Switch"
+        tools:layout_editor_absoluteX="54dp"
+        tools:layout_editor_absoluteY="95dp" />
+
 </android.support.constraint.ConstraintLayout>
