--- a/app/src/main/res/layout/activity_currency.xml
+++ b/app/src/main/res/layout/activity_currency.xml
@@ -4,29 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.dhruv.coinsense.CurrencyActivity">
+    tools:context="com.example.dhruv.coinsense.CurrencyActivity"
+    tools:layout_editor_absoluteY="81dp">
 
     <Spinner
         android:id="@+id/choice_spinner"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="27dp"
+        android:layout_width="173dp"
+        android:layout_height="29dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginTop="14dp"
         android:entries="@array/currency_array"
-        app:layout_constraintBottom_toTopOf="@+id/go_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/choose_text"
         app:layout_constraintTop_toBottomOf="@+id/header_text" />
 
     <TextView
         android:id="@+id/choose_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="37dp"
-        android:layout_marginEnd="52dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="31dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
         android:text="Choose Currency"
-        app:layout_constraintBottom_toTopOf="@+id/go_button"
         app:layout_constraintEnd_toStartOf="@+id/choice_spinner"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/header_text" />
@@ -35,34 +33,41 @@
         android:id="@+id/header_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="31dp"
-        android:layout_marginEnd="66dp"
-        android:layout_marginStart="62dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginEnd="140dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:text="Choose currency to get live price"
-        app:layout_constraintBottom_toTopOf="@+id/choice_spinner"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/choose_text"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/go_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="329dp"
-        android:layout_marginStart="13dp"
+        android:layout_marginBottom="400dp"
+        android:layout_marginEnd="256dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="52dp"
         android:onClick="checkPrice"
         android:text="Go"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/choose_text"
-        app:layout_constraintTop_toBottomOf="@+id/choice_spinner" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/choose_text" />
 
     <TextView
         android:id="@+id/price_text"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="31dp"
-        android:layout_marginTop="233dp"
+        android:layout_marginBottom="399dp"
+        android:layout_marginEnd="330dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="93dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.14"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 </android.support.constraint.ConstraintLayout>
