--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,105 +9,94 @@
 
 
     <EditText
-        android:id="@+id/username"
+        android:id="@+id/signup_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="164dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="24dp"
+        android:layout_marginEnd="127dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="37dp"
         android:ems="10"
         android:hint="Name"
         android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/signup_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/signup_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="164dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="36dp"
+        android:layout_marginEnd="127dp"
+        android:layout_marginStart="16dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/username" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="77dp"
-        android:layout_marginEnd="280dp"
+        android:layout_marginBottom="47dp"
+        android:layout_marginEnd="256dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="55dp"
         android:text="Register"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/crypto3" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Spinner
         android:id="@+id/crypto1"
         android:layout_width="200dp"
         android:layout_height="30dp"
-        android:layout_marginEnd="176dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="19dp"
+        android:layout_marginBottom="29dp"
+        android:layout_marginEnd="144dp"
+        android:layout_marginStart="16dp"
         android:entries="@array/CryptocurrencyChoice1"
+        app:layout_constraintBottom_toTopOf="@+id/crypto2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Spinner
         android:id="@+id/crypto2"
         android:layout_width="200dp"
         android:layout_height="30dp"
-        android:layout_marginEnd="176dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="19dp"
+        android:layout_marginBottom="29dp"
+        android:layout_marginEnd="144dp"
+        android:layout_marginStart="16dp"
         android:entries="@array/CryptocurrencyChoice1"
+        app:layout_constraintBottom_toTopOf="@+id/crypto3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/crypto1" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Spinner
         android:id="@+id/crypto3"
         android:layout_width="200dp"
         android:layout_height="30dp"
-        android:layout_marginEnd="176dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="19dp"
+        android:layout_marginBottom="29dp"
+        android:layout_marginEnd="144dp"
+        android:layout_marginStart="16dp"
         android:entries="@array/CryptocurrencyChoice1"
+        app:layout_constraintBottom_toTopOf="@+id/signup"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/crypto2" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="200dp"
         android:layout_height="30dp"
-        android:layout_marginEnd="179dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="43dp"
+        android:layout_marginBottom="21dp"
+        android:layout_marginEnd="144dp"
+        android:layout_marginStart="16dp"
         android:text="Choose 3 cryptocurrencies"
+        app:layout_constraintBottom_toTopOf="@+id/crypto1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
-
-    <Button
-        android:id="@+id/currency_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="73dp"
-        android:layout_marginStart="30dp"
-        android:text="Price"
-        android:onClick="goThere"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/signup" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
