--- a/app/src/main/res/layout/activity_currency.xml
+++ b/app/src/main/res/layout/activity_currency.xml
@@ -71,12 +71,12 @@
         android:id="@+id/tweets_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="159dp"
+        android:layout_marginBottom="31dp"
         android:layout_marginEnd="24dp"
         android:layout_marginTop="193dp"
         android:onClick="goTo"
         android:text="Get Tweets"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/signout_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/price_text" />
 
@@ -103,4 +103,18 @@
         android:onClick="info"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/signout_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="80dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="29dp"
+        android:text="Signout"
+        android:onClick="logout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/info_button" />
+
 </android.support.constraint.ConstraintLayout>
