--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -40,12 +40,12 @@
         android:id="@+id/login_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="39dp"
+        android:layout_marginBottom="40dp"
         android:layout_marginEnd="238dp"
         android:layout_marginStart="34dp"
         android:onClick="checkLogin"
         android:text="Login"
-        app:layout_constraintBottom_toTopOf="@+id/login_facebook"
+        app:layout_constraintBottom_toTopOf="@+id/forgot_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -61,4 +61,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/forgot_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="62dp"
+        android:text="Forgot password"
+        android:onClick="forgotPassword"
+        app:layout_constraintBottom_toTopOf="@+id/login_facebook"
+        tools:layout_editor_absoluteX="34dp" />
 </android.support.constraint.ConstraintLayout>
