--- a/app/src/main/res/layout/activity_currency.xml
+++ b/app/src/main/res/layout/activity_currency.xml
@@ -12,41 +12,26 @@
         android:id="@+id/tweets_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-<<<<<<< HEAD
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="160dp"
-=======
-        android:layout_marginBottom="31dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginTop="193dp"
->>>>>>> de0ff9f58137cdf53fbe723c6ca6e96b0cc2b4c4
-        android:onClick="goTo"
-        android:text="Get Tweets"
-        app:layout_constraintBottom_toTopOf="@+id/signout_btn"
+        android:layout_marginBottom="168dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="8dp"
+        android:text="Get Tweets!"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.888"
-        app:layout_constraintStart_toEndOf="@+id/info_button"
         app:layout_constraintTop_toBottomOf="@+id/header"
-        app:layout_constraintVertical_bias="0.051" />
+        app:layout_constraintVertical_bias="0.989" />
+
 
     <Button
         android:id="@+id/about_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="168dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="168dp"
         android:onClick="aboutus"
         android:text="About us"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/info_button"
-        app:layout_constraintHorizontal_bias="0.578"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/header"
-        app:layout_constraintVertical_bias="0.013" />
+        app:layout_constraintEnd_toStartOf="@+id/tweets_button" />
 
     <Button
         android:id="@+id/info_button"
@@ -55,16 +40,14 @@
         android:layout_alignLeft="@+id/price_text"
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/price_text"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="132dp"
-        android:layout_marginTop="256dp"
+        android:layout_marginBottom="168dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:onClick="info"
         android:text="Coin Info"
         app:layout_constraintBottom_toBottomOf="parent"
-<<<<<<< HEAD
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.02" />
+        app:layout_constraintEnd_toStartOf="@+id/about_btn"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/header"
@@ -79,10 +62,10 @@
         android:gravity="center"
         app:layout_constraintBottom_toTopOf="@+id/info_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.466"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.391">
+        app:layout_constraintVertical_bias="0.0">
 
 
         <Button
@@ -134,23 +117,28 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.137" />
-    </android.support.constraint.ConstraintLayout>
+
+        <Button
+            android:id="@+id/signout_btn"
+            android:layout_width="89dp"
+            android:layout_height="36dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:onClick="logout"
+            android:text="Signout"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.8"
+            app:layout_constraintStart_toEndOf="@+id/go_button"
+            app:layout_constraintTop_toTopOf="parent" />
+    </android.support.constraint.ConstraintLayout><![CDATA[
 
 =======
         app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
-        android:id="@+id/signout_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="80dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="29dp"
-        android:text="Signout"
-        android:onClick="logout"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/info_button" />
->>>>>>> de0ff9f58137cdf53fbe723c6ca6e96b0cc2b4c4
+    >>>>>>> de0ff9f58137cdf53fbe723c6ca6e96b0cc2b4c4
 
+]]>
 </android.support.constraint.ConstraintLayout>
