--- a/app/src/main/res/layout/activity_currency.xml
+++ b/app/src/main/res/layout/activity_currency.xml
@@ -16,6 +16,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginTop="8dp"
         android:text="Get Tweets!"
+        android:onClick="goTo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/header"
